manifests/hub/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: web-headers
  namespace: hub
spec:
  headers:
    contentSecurityPolicy: >-
      default-src 'self';
      script-src 'self' 'unsafe-inline';
      style-src 'self' 'unsafe-inline';
      img-src 'self' data:;
      font-src 'self';
      connect-src 'self' https://*.pivasik.org;
      form-action 'self';
      base-uri 'none';
      frame-ancestors 'none';
      object-src 'none'
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: strict-origin-when-cross-origin
    permissionsPolicy: "geolocation=(), microphone=(), camera=()"
    stsSeconds: 15552000
    forceSTSHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-headers
  namespace: hub
spec:
  headers: 
    contentSecurityPolicy: >-
      default-src 'self';
      script-src 'self' https://cdn.jsdelivr.net;
      style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
      img-src 'self' data: https://fastapi.tiangolo.com;
      connect-src 'self';
      frame-ancestors 'none';
      base-uri 'none';
      object-src 'none'
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: strict-origin-when-cross-origin
    stsSeconds: 15552000
    forceSTSHeader: true
