manifests/hub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub
  namespace: hub
  annotations:
    # Формат имени: <namespace>-<имя middleware>@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: hub-web-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pivasik.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hub-web
                port: { number: 80 }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-api
  namespace: hub
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: hub-limit-body@kubernetescrd,hub-api-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pivasik.org
      http:
        paths:
          # Правило длиннее корневого, поэтому traefik отдаёт /api сюда,
          # хотя объекты Ingress разные.
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hub-api
                port: { number: 8000 }
